Fixes horizontal scroll on subnav and adds correct mobile padding for carousel

--- a/_assets/stylesheets/pages/_community-store.scss
+++ b/_assets/stylesheets/pages/_community-store.scss
@@ -6,7 +6,10 @@
     color: #ffffff;
     display: flex;
 
-    span  {
+    .container {
+      padding-left: 30px;
+
+      span  {
         padding-right: 24px;
         line-height: 44px;
         vertical-align: middle;
@@ -16,6 +19,7 @@
             font-size: 14px;
             color: #ffffff;
         }
+      }
     }
 }
 
@@ -63,7 +67,7 @@
 
     @media (min-width: 993px){
         .carousel-cell {
-            width: calc(25%);
+            width: 25%;
         }
 
         .card-deck .card-img-top {
@@ -77,7 +81,6 @@
 }
 #groups-container {
     width: 100%;
-    height: 716px;
 
     .heading-container{
         margin-bottom: 45px;
@@ -129,20 +132,19 @@
 
 #trips-container {
     width: 100%;
-    height: 422px;
 }
 
 #people-container {
     width: 100%;
-    height: 329px;
 }
 
 @media screen and (max-width: 991px){
-    #community-store-sub-nav {
+  #community-store-sub-nav {
+        
+  .container {
         overflow: scroll;
+        white-space: nowrap;
+        padding-left: 15px;
     }
-
-    #groups-container{
-        height: auto;
-    }
+  }    
 }
